--- a/library_info.gradle
+++ b/library_info.gradle
@@ -2,10 +2,10 @@ ext.library = [
     min_sdk: 19,
     compile_sdk: 29,
 
-    publish_group: "com.afollestad",
+    publish_group: "com.johnett",
     publish_version: "0.1.0",
     publish_version_code: 1,
 
-    description: "(none)",
-    website: "https://github.com/afollestad/library-template-android"
+    description: "oauth authentication for github made with kotlin",
+    website: "https://github.com/Johnett/oauthgithub"
 ]
