--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,33 @@
 apply from: rootProject.file("gradle/versions_plugin_config.gradle")
 
 buildscript {
-  apply from: rootProject.file("dependencies.gradle")
+    apply from: rootProject.file("dependencies.gradle")
 
-  repositories {
-    google()
-    jcenter()
-  }
-  dependencies {
-    classpath deps.gradle_plugins.android
-    classpath deps.gradle_plugins.bintray_release
-    classpath deps.gradle_plugins.kotlin
-    classpath deps.gradle_plugins.spotless
-    classpath deps.gradle_plugins.versions
-  }
+    repositories {
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath deps.gradle_plugins.bintray_release
+        classpath deps.gradle_plugins.kotlin
+        classpath deps.gradle_plugins.spotless
+        classpath deps.gradle_plugins.versions
+    }
 }
 
 allprojects {
-  repositories {
-    google()
-    jcenter()
-  }
+    repositories {
+        google()
+        jcenter()
+    }
 }
 
 subprojects {
-  tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-    kotlinOptions {
-      jvmTarget = 1.8
-      freeCompilerArgs += ["-module-name", project.path.replace(':', '')]
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions {
+            jvmTarget = 1.8
+            freeCompilerArgs += ["-module-name", project.path.replace(':', '')]
+        }
     }
-  }
 }
