--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.afollestad.librarytemplatesample">
+    package="com.johnett.oauthgithubsample">
 
   <application
       android:allowBackup="true"
@@ -12,7 +12,7 @@
       android:supportsRtl="true"
       android:theme="@style/AppTheme"
       tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-    <activity android:name=".MainActivity">
+    <activity android:name="com.johnett.oauthgithubsample.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
