--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -46,5 +46,10 @@ ext.deps = [
         robolectric: "org.robolectric:robolectric:4.3.1",
         mockito_core: "org.mockito:mockito-core:3.2.4",
         truth: "com.google.truth:truth:1.0.1",
+    ],
+
+    square: [
+            okhttp: "com.squareup.okhttp3:okhttp:4.5.0",
+            okio: "com.squareup.okio:okio:2.5.0"
     ]
 ]
