--- a/oauthgithub/build.gradle
+++ b/oauthgithub/build.gradle
@@ -1,14 +1,21 @@
 ext.module_name = "librarytemplate"
 
 apply from: rootProject.file("gradle/android_library_config.gradle")
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 dependencies {
-  compileOnly deps.androidx.annotations
-  implementation deps.kotlin.stdlib8
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    compileOnly deps.androidx.annotations
+    implementation deps.kotlin.stdlib8
+    implementation deps.androidx.app_compat
+    implementation deps.square.okhttp
+    implementation deps.square.okio
 
-  testImplementation deps.kotlin.test.mockito
-  testImplementation deps.test.robolectric
-  testImplementation deps.test.junit
-  testImplementation deps.test.mockito_core
-  testImplementation deps.test.truth
+    testImplementation deps.kotlin.test.mockito
+    testImplementation deps.test.robolectric
+    testImplementation deps.test.junit
+    testImplementation deps.test.mockito_core
+    testImplementation deps.test.truth
 }
